--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-co",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +17,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
+    "swiper": "^10.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
