feat: add drawer

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-co",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://mikhailsulim.github.io/my-co/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
